--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
@@ -15,9 +14,12 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^3.0.1",
     "node-cron": "^3.0.2",
+    "pg": "^8.11.3",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
   }
